// XNAGameEngine | Hypo Klarich | 3/11/2014								//
// -CollisionManager.cs -Game1.cs -GameInterface.cs -GameObject.cs		//
// -Time: 11:00am - 1:38pm = 2:38										//
// -Notes: Collision is up and running. This is an un-optimized version //
// but is good enough for our first few projects.						//
//////////////////////////////////////////////////////////////////////////

XNAGameEngine | Hypo Klarich | 3/20/2014
-EveryClass was tweaked
-Time: 7:00 pm - 11:30 pm = 4:30
-Notes: Looked over the gamescreen class and changed the name to Screen. 
Also added 3 new classes, SplashScreen, GameScreen, MenuScreen. For many
of the major classes (pratically all) I made them all public for easy use,
this can be fixed later if needed. Also, added a background class to test
the GameStateManager. I'm still confused in regards to the enum ScreenState.
The GameStateManager is in Game1 class and uses gameInterface as a parameter,
still wondering if thats the best way. Look at the GameStateMaanger, Splash-
Screen, Screen and Game1 class for the major code. 

XNAGameEngine | Hypo Klarich | 3/20/2014
-Game1.cs -PhysicsManager.cs
-Time: 10:00 pm - 10:45 pm = 0:45
-Notes: Broke Jacqulyns physics so that it look the same as the odd one
but i think I found the root of the problem so there might me a real solution
soon.

XNAGameEngine | Jacqulyn Wong | 3/20/2014
-PhysicsManager.cs
-Time: 9:00pm - 10:00pm = 1:00
-Notes: Messed with the physics. I think they all collide now, but they just
ram into each other. Maybe it's their difference in velocities now.

XNAGameEngine | Eric Flores | 3/20/2014
-GameScreen.cs
-Time: 12:30pm - 3:00pm = 2:30
-Notes: Added the properties to GameScreen.cs still not finished with it but i
did put comments in for what i have so far. Also i put the harpoon to the mouse.

XNAGameEngine | Hypo Klarich | 3/20/2014
-ChangeLog.txt
-Time: 11:30am - 11:50am = 0:20
-Notes: Check your assignements and file responcibility, if you don't know 